Added cluster dns names

--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -3,3 +3,9 @@ cluster_dns_names:
     name: acm-app1-acm-app1.apps.openshift.rhcasalab.com
   aws-ca:
     name: acm-app1-acm-app1.apps.aws-ca.mouimetlab.com
+  aws-east:
+    name: console-openshift-console.apps.aws-east.mouimetlab.com
+  azure-ca-central:
+    name: console-openshift-console.apps.azure-ca-central.azmouimetlab.com
+  gcp-ca:
+    name: console-openshift-console.apps.gcp-ca.mouimet.com
