--- a/send-slack.yaml
+++ b/send-slack.yaml
@@ -8,5 +8,5 @@
   - name: Send notification message via Slack
     community.general.slack:
       token: T01DW2WQ2NM/B01LEJL8P60/ZlCoRFrR6oL6Mk2njcDVyFMX
-      msg: 'Le déploiement est commencé sur {{ target_clusters }}'
+      msg: '{{ message }} {{ target_clusters }}'
     delegate_to: localhost
