--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -7,5 +7,9 @@ cluster_dns_names:
     name: console-openshift-console.apps.aws-east.mouimetlab.com
   azure-ca-central:
     name: console-openshift-console.apps.azure-ca-central.azmouimetlab.com
+  azure-ca:
+    name: console-openshift-console.apps.azure-ca-central.azmouimetlab.com
+  azure-ca-east:
+    name: console-openshift-console.apps.azure-ca-central.azmouimetlab.com
   gcp-ca:
     name: console-openshift-console.apps.gcp-ca.mouimet.com
